update projects descriptions

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
       href="https://github.com/Morrow98J/Focus_Game">GitHub</a></p>
   <div>
     Command-line playable implementation of the board game Focus, also known as Domination. Game is
-    playable with two players and instructions are included within the readme.</div><br><br>
+    playable with two players and instructions are included.</div><br><br>
   <hr />
   <p class="lead">Low Level IO
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MASM Assembly, Visual
@@ -60,75 +60,13 @@
   <p class="lead">Harry Potter NLP Analysis
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Python, NumPy,
     Matplotlib, Jupyter Notebook <a href="https://github.com/Morrow98J/Harry_Potter_Analysis">GitHub</a></p>
-  <div>Data Science Natural Language Processing project that sorts and cleans 76,944 words for use in identifying
-    proper nouns to graph with Matplotlib.</div><br><br>
+  <div>Data Science Natural Language Processing program that cleans and detects proper nouns from 76,944 words for data visualization within
+    Matplotlib.</div><br><br>
   <hr />
   <p class="lead">This Website
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; HTML+CSS, JavaScript,
     Bootstrap, Github Atom <a href="https://github.com/Morrow98J/Web_Portfolio">GitHub</a></p>
-  <div style="width:100%;height:600px;line-height:3em;overflow:auto;padding:5px;">Lorem ipsum dolor sit amet consectetur
-    adipisicing elit. Aut tempora optio perspiciatis? Nemo dolores nulla hic maiores est esse eveniet quo tempore
-    aspernatur ipsam, sequi non asperiores, obcaecati ullam? Distinctio.
-    Accusamus natus, hic laudantium quo et voluptatem nihil harum, possimus quae asperiores voluptatibus accusantium
-    corrupti, ex eius suscipit. Explicabo necessitatibus quam, Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-    Molestiae rem veniam libero cupiditate tempore ut neque veritatis quam quia facilis voluptates commodi, ipsum
-    impedit modi magni repellendus dolores quae! Laudantium?
-    Dolorem voluptatibus perspiciatis, ratione quis Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-    rerum nulla, sed at cupiditate vel distinctio laudantium obcaecati similique sit molestias eaque ipsum provident
-    inventore eum! Nulla dolor assumenda nemo?
-    Voluptate ducimus perferendis inventore consequatur. Illum tenetur saepe ipsa, fugiat quaerat soluta error ad
-    eveniet? Consectetur necessitatibus delectus sit sequi pariatur dolor vitae deserunt omnis distinctio facere? Iure,
-    cupiditate ut.
-    Aspernatur aperiam fugit quis ullam eos repellendus non! Illum nemo fugiat odit dignissimos mollitia reiciendis
-    pariatur minima quidem dolorum harum, necessitatibus at quasi dolores deleniti odio consequuntur enim sapiente?
-    Reiciendis.
-    Error debitis deserunt alias impedit, fuga, similique illum ab qui quas ipsum repellendus beatae. Doloremque saepe
-    eaque voluptatum, eligendi officiis vitae voluptas delectus provident harum reprehenderit quidem iste doloribus
-    earum.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore molestias ducimus sint. Quo, id. Optio amet
-    modi suscipit, eos, magnam cumque, non omnis veniam rem odit inventore natus. Quas.
-    Aut, recusandae consectetur distinctio enim alias harum qui veritatis itaque est odio cumque hic necessitatibus a
-    neque illo aliquam blanditiis aspernatur facilis, voluptatum reiciendis? Omnis beatae fugit excepturi corporis
-    soluta.
-    Corrupti maiores perferendis voluptatibus! Omnis, odio aut iure atque itaque fugit quae aliquam sed magnam,
-    explicabo ut asperiores harum ipsum! Id, iste quo recusandae optio fuga dicta nobis? Architecto, voluptate.
-    Blanditiis iusto magnam adipisci voluptatem vero perspiciatis quasi eveniet mollitia id earum modi, alias nam. Nulla
-    voluptas sequi, doloribus, porro explicabo cupiditate sunt impedit animi temporibus omnis dignissimos eius ex!
-    Modi aliquam perspiciatis cum, hic dignissimos, et adipisci earum laboriosam itaque culpa suscipit quas placeat a,
-    vitae repudiandae sint fugiat dolor voluptates? Aliquid repellendus dignissimos porro tenetur! Quae, eaque ducimus.
-    Praesentium beatae, vero rem ipsum, magnam pariatur neque explicabo ipsam sed perspiciatis incidunt harum, modi
-    doloribus ipsa suscipit ut? Fugiat non labore ea reiciendis laboriosam at eveniet perferendis facere ratione!
-    Similique laboriosam ipsam vero, reprehenderit ea dolorum autem quisquam eos est esse atque eum nisi. A voluptatum
-    accusamus quo culpa magnam enim alias vel architecto similique, maiores repellat, pariatur earum?
-    Provident commodi maiores omnis, voluptatum impedit nisi laborum fugit tempora excepturi modi ipsum voluptate
-    assumenda eos nihil distinctio temporibus quam ab dolore voluptatem incidunt laboriosam? Doloremque inventore odio
-    enim praesentium.
-    Fuga quos quam molestiae neque molestias temporibus fugiat cumque a, illum similique suscipit inventore debitis
-    assumenda rem fugit reprehenderit necessitatibus iusto consectetur ratione, vero id nobis corporis. Incidunt, magnam
-    quis.
-    Cupiditate non sapiente atque inventore doloribus. Numquam soluta nostrum commodi perferendis iusto quo cumque
-    inventore! Suscipit minus explicabo laborum sequi officia ut, veritatis nostrum repellat accusantium. Consequuntur
-    reiciendis pariatur voluptatum.
-
-    Ullam impedit ipsum, alias ea omnis nemo placeat numquam, inventore, recusandae culpa atque aspernatur vero
-    voluptatibus a qui quis. Dolor corrupti quidem alias non fugiat animi repellat consectetur possimus ut.
-    Sunt, sapiente! Velit obcaecati animi corrupti accusamus! Odio eaque harum inventore quis voluptatem. Dolorem,
-    temporibus maiores. Explicabo, aliquid omnis dolore error maxime cum quam ea ducimus accusantium odit corrupti
-    repudiandae.
-    Quod vel, aliquam neque veniam eos ipsam laudantium velit unde nesciunt et sint inventore non optio eum commodi,
-    quisquam a consequuntur rerum delectus, laboriosam error. Explicabo error iure obcaecati rem.
-    Autem, reiciendis commodi? Id asperiores corporis, repudiandae facilis dolore soluta adipisci, illo at neque, autem
-    nostrum suscipit ratione! Quae voluptates distinctio rerum veniam totam ducimus harum corrupti, animi ab eligendi?
-    Reiciendis voluptates et repellat distinctio possimus modi voluptatum repellendus, sint culpa numquam molestias,
-    pariatur, quibusdam veritatis iste quisquam eaque? Quae iste, voluptate dolorem voluptatum recusandae provident
-    harum optio perspiciatis amet.
-    Eum tempora reiciendis doloribus voluptate obcaecati deserunt cumque excepturi accusamus ab dolorum adipisci quod,
-    sed esse velit blanditiis consequatur corporis, omnis aut est alias sint incidunt rem quibusdam suscipit. Rem? amet
-    ipsa reiciendis repellat iusto? Ipsa autem cum pariatur consequuntur molestias dolores, at quas maxime nostrum ab
-    perspiciatis quos in eum? Labore vitae maiores rem? excepturi dolores asperiores quasi officia placeat dolorum
-    cumque saepe!
-    Alias minus nesciunt ducimus accusantium numquam itaque, ab quia corrupti autem vel quam nihil sit delectus
-    voluptatibus harum cupiditate aspernatur magnam id error consectetur quasi est eos? Repellendus, animi quibusdam?
+  <div style="width:100%;height:600px;line-height:3em;overflow:auto;padding:5px;">Web-based portfolio and resume showcasing front-end web development stylized with Bootstrap and the Nord theme
   </div>
   <br>
   <div class="d-flex justify-content-center">
