add bold job title

--- a/experience.html
+++ b/experience.html
@@ -49,7 +49,7 @@
     <hr />
     <p class="lead">&nbsp;PriceSpider</p>
 
-    <p class="lead">&nbsp;Support Engineer
+    <p class="lead">&nbsp;<b>Support Engineer</b>
       <ul>
         <li>Respond to implementation issues in HTML + CSS and resolve them according to internal service
           level agreements</li>
@@ -60,7 +60,7 @@
       </li>
       <p class="lead">&nbsp;hummingbot.io</p>
 
-      <p class="lead">&nbsp;IT Software Support Analyst</p>
+      <p class="lead">&nbsp;<b>IT Software Support Analyst</b></p>
       <ul>
         <li>Pledge educator during Spring semester at Beta Upsilon chapter composed of 180+ active brothers</li>
         <li>Facilitated the fraternity education process: traditions and background focusing on pledge participation
