--- a/experience.html
+++ b/experience.html
@@ -62,10 +62,10 @@
 
       <p class="lead">&nbsp;<b>IT Software Support Analyst</b></p>
       <ul>
-        <li>Pledge educator during Spring semester at Beta Upsilon chapter composed of 180+ active brothers</li>
-        <li>Facilitated the fraternity education process: traditions and background focusing on pledge participation
-        </li>
-        <li>Coordinated meetings Sunday-Thursday focused on house maintenance and improvements</li>
+        <li>Deployed and tested automated cryptocurrency trading bots with Docker</li>
+        <li>Performed database administration with MySQLWorkbench and Jupyter-Lab</li>
+        <li>Programmed additional functionality into Jupyter Notebooks in Python</li>
+        <li>Revised and created pull requests for internal documentation</li>
       </ul>
       </li>
       <hr />
